themes/default/css/global.css
/* ... */
	.header-side .global-navigation .top-button-wrapper {
		position: static;
	}

	.header-side.is-touch-interface .menu-dropdown .menu-dropdown-content {
		display: block;
	}

	.header-side .menu-dropdown-toggle-btn {
		display: none;
	}

	.header-side .global-navigation .menu-dropdown {
		margin-right: 0;
	}

	.header-side.is-touch-interface .logo {
		margin-bottom: 10px;
	}

	.header-side::before {
		content: '';
		display: block;
		position: fixed;
		left: 0;
		right: 0;
		top: 0;
		bottom: 0;
		z-index: 100;
		visibility: hidden;
		transition: visibility 0.4s ease-in-out, background-color 0.4s ease-in-out;
		/* X shape cursor */
		cursor: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAMAAADXqc3KAAAADFBMVEUAAAD///////////84wDuoAAAAA3RSTlMAYM+UUHBYAAAAPUlEQVR4AeXSwQkAIAwEwVzsv2fh3mMF+ssOQhBnMzjZyYE0QpogDZCOEA2+jo5FuDpEveJecM9X7/b8PhcNlwDl/m+bagAAAABJRU5ErkJggg=='),not-allowed;
	}

	.header-side.is-side-menu-open::before {
		background: {$COLOR_RGBA,{$GET,BW},0.7};
		visibility: visible;
	}

	.header-side .header-inner {
		position: fixed;
		top: 0;
		bottom: 0;
		left: 0;
		background: {$GET,WB};
		box-shadow: {$GET,box_shadow};
		z-index: 100;
		max-width: 100vw;
		overflow: auto; /* Show scrollbars when exceeding screen height*/
	}

	.header-side .header-inner .btn-side-menu-toggler {
		float: right;
		margin: 10px;
	}

	.header-side .header-inner .global-navigation {
		clear: both;
	}
/*{+END}*/

/* This is applied to the screen title, which is specially included on each screen; in the case of Comcode pages it is the first level 1 title. The screen title is by default an h1, but we define the styles separately so we can style this special title independently (there are lots of cool things we could do to it) */
.screen-title {
	margin-bottom: 0.8em;
	min-width: 300px;
	padding-bottom: 6px; /* For better alignment with breadcrumbs to the right */
}
.screen-title img {
	vertical-align: middle;
}
.screen-title li span {
	display: block;
}

/* .hero-section is specially designed to wrap around a title and some text, to give a 'hero' introduction for the front page of a site (standard marketing technique) */
.hero-section {
	background-color: {$GET,main_background};
	font-size: 1.25em;
	color: {$GET,slightly_seeded_text};
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; /* Choose better font for larger text */
	padding: 2em 3em;
	margin-bottom: 3em;
	position: relative;
	left: -0.8em; /* So is flush to borders, undoes page padding */
}
#wysiwyg-editor .hero-section {
	left: 0;
}
.hero-section h1 {
	font-size: 2.6em;
	margin-bottom: 0.1em;
	text-decoration: none;
	border-bottom: none;
	color: inherit;
}

.hero-section * {
	margin-top: 0;
}

.global-breadcrumbs {
	padding: 7px 0 7px 0;
}
/*{+START,CSS_MODE,desktop}*/
	.global-breadcrumbs {
		/*{+START,IF,{$AND,{$NEQ,{$THEME_OPTION,fixed_width},0},{$NEQ,{$THEME},admin}}}*/
			text-align: right; /* Goes on own line in fixed width mode, due to lack of space */
		/*{+END}*/
		/*{+START,IF,{$NAND,{$NEQ,{$THEME_OPTION,fixed_width},0},{$NEQ,{$THEME},admin}}}*/
			float: right; /* Sits beside title on non-fixed width */
		/*{+END}*/
		margin-left: 0.5em;
	}
/*{+END}*/
.global-breadcrumbs abbr, .global-breadcrumbs a, .global-breadcrumbs span {
	white-space: nowrap !important;
}
/*{+START,CSS_MODE,mobile}*/
	.global-breadcrumbs {
		margin-bottom: 1em;
	}
/*{+END}*/

.non-accessibility-redundancy .breadcrumbs {
	width: 100%;
}

.breadcrumbs {
}

.breadcrumbs span {
	vertical-align: middle;
}

.breadcrumbs .sep::after,
.associated-breadcrumbs .sep::after {
	/* Chevron */
	border-style: solid;
	border-width: 0.15em 0.15em 0 0;
	content: '';
	display: inline-block;
	height: 0.5em;
	left: 0.15em;
	position: relative;
	top: 0.15em;
	transform: rotate(45deg);
	vertical-align: 0.3em;
	width: 0.5em;
	margin-left: 0.3em;
	margin-right: 0.6em;
	opacity: 0.7;
}

.breadcrumbs .sep:last-child::after,
.associated-breadcrumbs .sep:last-child::after {
	display: none !important;
}

.breadcrumbs-img {
	margin-right: 4px;
	width: 24px;
	height: 24px;
	vertical-align: bottom;
	color: {$GET,a.link};
}

.title-tagline {
	font-size: 0.95em;
	padding-bottom: 2em;
	color: {$GET,area_key_text};
}
h1 + .title-tagline {
	margin-top: -1.2em;
}

body#main-website #main-website-inner, html > body div.global-middle-faux {
	background-color: {$GET,main_background};

	/*
		Try this web search to get image ideas https://duckduckgo.com/?q=tile+background&iax=images&ia=images
		Find how to edit the referenced "inner_background" theme image by doing an Admin Zone search for "inner_background"
	*/
	/*{+START,IF,{$THEME_OPTION,inner_background}}*/
		background: url('{$IMG_INLINE;,backgrounds/inner_background}');
		background-size: 300px 300px;
	/*{+END}*/
}

#main-website-inner.faded::after {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.7);
	content: "";
	pointer-events: none;
}
#main-website-inner.faded>header, #main-website-inner.faded>div {
	opacity: 0.3;
	transition: opacity 0.5s ease-in-out;
	filter: sepia();
}

.main-website-faux {
	background-color: {$GET,fixed_width_background} !important;
}

/* Should not be flush with site borders (but the menu above it will be, so don't do the whole panel */
/*{+START,CSS_MODE,desktop}*/
	#panel-top .cns-member-bar-etc {
		margin: 0 1em;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
	#panel-top .cns-member-bar-etc {
		margin: 0 2px;
	}
/*{+END}*/

.zone-running-docs .comcode-page {
	line-height: 1.35em;
}

.global-middle-outer {
	margin-top: 1em;
}

.global-side-panel h2 {
	text-transform: lowercase;
	font-weight: normal;
	padding-top: 10px;
	padding-left: 10px;
}

.global-side-panel {
	overflow-wrap: break-word;
	color: {$GET,slightly_seeded_gray_text};
}

.global-middle-faux > .global-side-panel {
	width: auto;
}

#panel-left {
	margin-right: 1em;
}

#panel-right {
	margin-left: 1em;
}
/* ... */

